# ChatRoom

./: CMakeLists.txt  README.md  files.txt  init_db.sql  install.sh  plan.md
project/client/: CMakeLists.txt  TcpClient.cpp  TopClient.cpp  clientmain.cpp
project/client/chat/: CommManager.cpp  CommManager.hpp  cfile_manager.cpp  sqlite.cpp  winloop.cpp
project/client/chat/main/: CommManager.cpp  CommManager.hpp
project/client/include/: CommManager.hpp  TcpClient.hpp  TopClient.hpp  cfile_manager.hpp  output.hpp  sqlite.hpp  winloop.hpp
project/client/include/CLI/: TerminalInput.hpp  output.hpp  winloop.hpp
project/client/include/chat/main/: CommManager.hpp
project/client/interface/: output.cpp  winloop.cpp
project/client/interface/CLI/: TerminalInput.cpp  output.cpp  winloop.cpp
project/client/interface/Qt/: mainwindow.ui
project/client/interface/textbased/: TeminalInput.cpp
project/global/: CMakeLists.txt
project/global/abstract/: action.hpp  command.pb.cc  command.pb.h  command.proto  data.pb.cc  data.pb.h  data.proto  datatypes.cpp  datatypes.hpp  datatypes_hash.hpp  envelope.pb.cc  envelope.pb.h  file.pb.cc  file.pb.h  file.proto  message.pb.cc  message.pb.h  message.proto
project/global/abstract/proto/: command.proto  data.proto  envelope.proto  file.proto  message.proto
project/global/entity/: command.cpp  file.cpp  group.hpp  message.cpp  message.hpp  user.hpp
project/global/include/: action.hpp  chatmessage.hpp  command.hpp  errthrow.hpp  file.hpp  group.hpp  logging.hpp  message.hpp  safe_deque.hpp  safe_queue.hpp  threadpool.hpp  time_utils.hpp  user.hpp
project/io/: CMakeLists.txt  ioaction.cpp
project/io/include/: Socket.hpp  TcpConnection.hpp  ioaction.hpp  reactor.hpp
project/io/local/: ioaction.cpp
project/io/net/: Socket.cpp  TcpConnection.cpp  ioaction.cpp  reactor.cpp
project/server/: CMakeLists.txt  TcpServer.cpp  TcpServerConnection.cpp  TopServer.cpp  connection_manager.cpp  servermain.cpp  topserver.cpp
project/server/chat/: connection_manager.cpp  dispatcher.cpp  email.cpp  handler.cpp  sfile_manager.cpp
project/server/database/: mysql.cpp  redis.cpp  redis.hpp
project/server/include/: TcpServer.hpp  TcpServerConnection.hpp  TopServer.hpp  callbacks.hpp  connection_manager.hpp  dispatcher.hpp  email.hpp  handler.hpp  mysql.hpp  redis.hpp  sfile_manager.hpp  topserver.hpp
sql/: client_init.sql  server_init.sql
